--- a/docs/guides/setup-channel.mdx
+++ b/docs/guides/setup-channel.mdx
@@ -48,7 +48,9 @@ Available plans:
       The Instances section in your [IBM Quantum account page](https://quantum.ibm.com/account) lists the instances that you can access.
     </Admonition>
 
-1. <span id="save-account"></span>Retrieve your API token from the [IBM Quantum account page](https://quantum.ibm.com/account). **If you are on a trusted machine,** use the `save_account()` method to save your credentials locally. (Skip to the next step if you are not using a trusted machine to authenticate to IBM Quantum Platform.) To use `save_account()`, first activate your Python virtual environment (see the [installation instructions](/guides/install-qiskit#local) if you do not already have a virtual environment set up) and run Python to open a read-eval-print loop (REPL), then enter the following:
+1. Retrieve your API token from the [IBM Quantum account page](https://quantum.ibm.com/account), and activate your Python virtual environment.  See the [installation instructions](/guides/install-qiskit#local) if you do not already have a virtual environment set up. 
+
+    <span id="save-account"></span>**If you are working in a trusted Python environment (such as on a personal laptop or workstation),** use the `save_account()` method to save your credentials locally. ([Skip to the next step](#untrusted-machine) if you are not using a trusted environment, such as a shared or public computer, to authenticate to IBM Quantum Platform.) To use `save_account()`, run Python in your virtual environment to open a read-eval-print loop (REPL), then enter the following:
 
     ```python
     from qiskit_ibm_runtime import QiskitRuntimeService
@@ -59,24 +61,28 @@ Available plans:
     )
     ```
 
-    Close out of the REPL with `exit()`. Whenever you need to authenticate to the service, you can load your credentials with `QiskitRuntimeService()`.
-
-    <Admonition type="warning">
-      **Protect your API token!** Never include your token in plain text in a notebook file. If you are on a trusted machine, use the `save_account()` method described in the previous step to store your credentials, keeping in mind that your token will still be stored as plain text on your local drive. If you are not on a trusted machine, use the instructions in the next step.
-    </Admonition>
+    Close out of the REPL with `exit()`. From now on, whenever you need to authenticate to the service, you can load your credentials with `QiskitRuntimeService()`.
 
       * If you have saved credentials for both an IBM Quantum Platform account and an IBM Cloud account, IBM Cloud is the default account used when you initialize your account, unless you specify `set_as_default=True` in your IBM Quantum Platform account when you use the `save_account()` method. (REVIEWERS: IS THIS TRUE??)
       * If you are saving multiple accounts per channel, consider using the `name` parameter to differentiate them. (REVIEWERS: Does each named account within the same channel use the same API token, or does each have a unique token?)
       * Credentials are saved to `$HOME/.qiskit/qiskit-ibm.json`.  Do not manually edit this file.
 
-1. **If you are not on a trusted machine** (such as a shared computer), do the following to authenticate, while being careful not to save your API token in a notebook file or any other file on the local machine. 
+    <Admonition type="warning">
+      **Protect your API token!** Never include your token in plain text in a notebook file. If you are working in a trusted Python environment (such as on a personal laptop or workstation), use the `save_account()` method described in the previous step to store your credentials, keeping in mind that your token will still be stored as plain text on your local drive. If you are executing code in a Python environment that is not trusted, see the [instructions in the next step](#untrusted-machine).
+    </Admonition>
+
+1. <span id="untrusted-machine"></span>**Avoid executing code on an external or random cloud Python environment to minimize security risks.** If you must use an untrusted environment (on, for example, a public computer), change your API token after each use by rotating it on the [IBM Quantum Platform dashboard](https://quantum.ibm.com/) (click the refresh button in the API token field). To initialize the service in this situation, you can use code like the following:
 
     ```python
     from qiskit_ibm_runtime import QiskitRuntimeService
   
+    # Refresh your API token on the dashboard after using the code as follows:
     service = QiskitRuntimeService(channel="ibm_quantum", token="<MY_IBM_QUANTUM_TOKEN>")
     ```
 
+    <Admonition type="warning">
+      When sharing code with others, ensure that your API token is not embedded directly within the Python script in plain text. Instead, share the script without the token and provide instructions for securely setting it up.
+    </Admonition>
 
 1. Test your setup.  Run a simple circuit using Sampler to ensure that your environment is set up properly:
 
